<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <EditText
        android:id="@+id/addSsid"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:hint="@string/hint_ssid"
        android:inputType="text"
        android:importantForAutofill="no"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/addPass"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/addPreferred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/networks_prefer"
        android:textSize="12sp" />
</LinearLayout>
